# sir

./: .gitignore  .tarpaulin.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: Cargo.toml
app/src/: error.rs  input.rs  main.rs
app/tests/: cli.rs
src/: error.rs  input.rs  main.rs
src/modifiers/: mod.rs  show_end.rs
tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: main.rs
