[package]
name = "sir"
version = "0.1.0"
edition = "2021"
description = "SIR is a Rust-based command line application mimicking the 'cat' command, designed for educational purposes."
license-file = "LICENSE"
repository = "https://github.com/Vixys/sir"
authors = ["Sébastien Marichal <sebmarichal@gmail.com>"]
exclude = ["tests/*", "target/*", "README.md", "LICENSE", ".tarpaulin.toml", ".gitignore", ".vscode", ".devcontainer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
assert_fs = "1.0.13"
test-log = "0.2.11"
assert_cmd = "2.0.8"
predicates = "3.0.3"
test-case = "3.1.0"
